2023/03-istio-kube-security/authorization/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shoes
spec:
  selector:
    matchLabels:
      app: shoes
  replicas: 1
  template:
    metadata:
      labels:
        app: shoes
    spec:
      serviceAccountName: shoes-sa
      terminationGracePeriodSeconds: 5
      restartPolicy: Always
      containers:
        - name: main
          image: gcr.io/kubernetes-e2e-test-images/echoserver:2.2
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: shoes
spec:
  type: ClusterIP
  selector:
    app: shoes
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory
spec:
  selector:
    matchLabels:
      app: inventory
  replicas: 1
  template:
    metadata:
      labels:
        app: inventory
    spec:
      serviceAccountName: inventory-sa
      terminationGracePeriodSeconds: 5
      restartPolicy: Always
      containers:
        - name: sleep
          image: curlimages/curl
          command: ["/bin/sleep", "infinity"]
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /etc/sleep/tls
              name: secret-volume
      volumes:
        - name: secret-volume
          secret:
            secretName: sleep-secret
            optional: true
---
apiVersion: v1
kind: Service
metadata:
  name: inventory
spec:
  type: ClusterIP
  selector:
    app: inventory
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
spec:
  selector:
    matchLabels:
      app: users
  replicas: 1
  template:
    metadata:
      labels:
        app: users
    spec:
      serviceAccountName: users-sa
      terminationGracePeriodSeconds: 5
      restartPolicy: Always
      containers:
        - name: main
          image: gcr.io/kubernetes-e2e-test-images/echoserver:2.2
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: users
spec:
  type: ClusterIP
  selector:
    app: users
  ports:
    - name: http
      port: 80
      targetPort: 8080
