2023/03-istio-kube-security/authorization/shoes-authz.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "shoes-writer"
  namespace: auth
spec:
  selector:
    matchLabels:
      app: shoes
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/auth/sa/inventory-sa"]
      to:
        - operation:
            methods: ["GET"]
