2023/03-istio-kube-security/authorization/users-authz.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "users-deny-all"
  namespace: auth
spec:
  selector:
    matchLabels:
      app: users
